# flower-fedeca

./: Dockerfile  README.md  compose.yaml  pyproject.toml
data/center0/: data.csv
data/center1/: data.csv
data/center2/: data.csv
data/center3/: data.csv
fedeca_flower/: client_app.py  server_app.py
fedeca_flower/fedeca/: __init__.py  disco.py  disco_utils.py  newton_raphson.py  robustcox.py  survival_utils.py  utils.py
