# =====================================================================
# For a full TOML configuration guide, check the Flower docs:
# https://flower.ai/docs/framework/how-to-configure-pyproject-toml.html
# =====================================================================

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fedeca"
version = "1.0.0"
description = "Federated external control arm method (FedECA) for survival analysis, as a Flower App."
license = { file = "LICENSE" }
# Dependencies for your Flower App
dependencies = [
    "flwr[simulation]==1.26.1",
    "pandas>=2.2.3",
    "torch>=2.7.0",
    "lifelines==0.30.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "owkin"

# Point to your ServerApp and ClientApp objects
# Format: "<module>:<object>"
[tool.flwr.app.components]
serverapp = "fedeca_flower.server_app:app"
clientapp = "fedeca_flower.client_app:app"

# Default federation to use when running the app
[tool.flwr.app.config]
nr-iterations = 10 # steps in NewtonRapshon stage
cox-comp-iterations = 10 # rounds for federated Cox
path-to-data = "data/center{}/data.csv"
bootstrap = false # if false, then naïve and robust FedECA are executed
bootstrap-iterations = 20
bootstrap-fn = "global" # {"per-client", "global"}
